wordpress/wordpress-service-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: NodePort
