wordpress/wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
  - host: wordpress.me
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: 8080
